// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateDTS snapshot > generates completely typed-router.d.ts for config-based routing > ConfigBased-typed-router.d.ts 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// oxfmt-ignore
// @ts-nocheck
// noinspection ES6UnusedImports
// Generated by essor-router. !! DO NOT MODIFY THIS FILE !!
// It's recommended to commit this file.
// Make sure to add this file to your tsconfig.json file as an "includes" or "files" entry.

import type {
  RouteRecordInfo,
  ParamValue,
  ParamValueOneOrMore,
  ParamValueZeroOrMore,
  ParamValueZeroOrOne,
} from 'essor-router'
import type {
  InferRouteBeforeLoadData,
  InferRouteDefinitionFromDefinePageModule,
  InferRouteLoaderData,
  InferRouteSearch,
  InferRouteStartOptions,
  RouteTreeNodeInfo,
} from 'essor-router/experimental'

declare module 'essor-router' {
  interface TypesConfig {
    ParamParsers: never
  }

  /**
   * Route name map generated by essor-router
   */
  export interface RouteNamedMap {
    'home': RouteRecordInfo<
      'home',
      '/',
      Record<never, never>,
      Record<never, never>,
      | never
    >,
    'catch-all': RouteRecordInfo<
      'catch-all',
      '/:all(.*)*',
      { all?: string | number[] | undefined | null },
      { all?: string[] },
      | never
    >,
    'settings': RouteRecordInfo<
      'settings',
      '/settings',
      Record<never, never>,
      Record<never, never>,
      | 'settings-profile'
    >,
    'settings-profile': RouteRecordInfo<
      'settings-profile',
      '/settings/profile',
      Record<never, never>,
      Record<never, never>,
      | never
    >,
    'users-id': RouteRecordInfo<
      'users-id',
      '/users/:id',
      { id: string | number },
      { id: string },
      | never
    >,
  }

  /**
   * Route tree map generated by essor-router.
   * Includes search/loader/start type inference from defineRoute()/definePage().
   */
  export interface RouteTreeMap {
    'home': RouteTreeNodeInfo<
      'home',
      '/',
      InferRouteSearch<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/Home.tsx?definePage&lang.tsx')>>,
      InferRouteLoaderData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/Home.tsx?definePage&lang.tsx')>>,
      InferRouteBeforeLoadData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/Home.tsx?definePage&lang.tsx')>>,
      InferRouteStartOptions<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/Home.tsx?definePage&lang.tsx')>>
    >,
    'catch-all': RouteTreeNodeInfo<
      'catch-all',
      '/:all(.*)*',
      InferRouteSearch<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/NotFound.tsx?definePage&lang.tsx')>>,
      InferRouteLoaderData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/NotFound.tsx?definePage&lang.tsx')>>,
      InferRouteBeforeLoadData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/NotFound.tsx?definePage&lang.tsx')>>,
      InferRouteStartOptions<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/NotFound.tsx?definePage&lang.tsx')>>
    >,
    'settings': RouteTreeNodeInfo<
      'settings',
      '/settings',
      InferRouteSearch<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/Settings.tsx?definePage&lang.tsx')>>,
      InferRouteLoaderData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/Settings.tsx?definePage&lang.tsx')>>,
      InferRouteBeforeLoadData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/Settings.tsx?definePage&lang.tsx')>>,
      InferRouteStartOptions<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/Settings.tsx?definePage&lang.tsx')>>
    >,
    'settings-profile': RouteTreeNodeInfo<
      'settings-profile',
      '/settings/profile',
      InferRouteSearch<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/SettingsProfile.tsx?definePage&lang.tsx')>>,
      InferRouteLoaderData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/SettingsProfile.tsx?definePage&lang.tsx')>>,
      InferRouteBeforeLoadData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/SettingsProfile.tsx?definePage&lang.tsx')>>,
      InferRouteStartOptions<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/SettingsProfile.tsx?definePage&lang.tsx')>>
    >,
    'users-id': RouteTreeNodeInfo<
      'users-id',
      '/users/:id',
      InferRouteSearch<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/UserDetail.tsx?definePage&lang.tsx')>>,
      InferRouteLoaderData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/UserDetail.tsx?definePage&lang.tsx')>>,
      InferRouteBeforeLoadData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/UserDetail.tsx?definePage&lang.tsx')>>,
      InferRouteStartOptions<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/fixtures/pages/UserDetail.tsx?definePage&lang.tsx')>>
    >,
  }

  export type RouteTreeNames = keyof RouteTreeMap

  /**
   * Route file to route info map by essor-router.
   * Used by the \\\`typed-router\\\` Volar plugin to automatically type \\\`useRoute()\\\`.
   *
   * Each key is a file path relative to the project root with 2 properties:
   * - routes: union of route names of the possible routes when in this page (passed to useRoute<...>())
   * - views: names of nested views (can be passed to <RouterView name="...">)
   *
   * @internal
   */
  export interface _RouteFileInfoMap {
    'fixtures/pages/Home.tsx': {
      routes:
        | 'home'
      views:
        | never
    }
    'fixtures/pages/NotFound.tsx': {
      routes:
        | 'catch-all'
      views:
        | never
    }
    'fixtures/pages/Settings.tsx': {
      routes:
        | 'settings'
        | 'settings-profile'
      views:
        | 'default'
    }
    'fixtures/pages/SettingsProfile.tsx': {
      routes:
        | 'settings-profile'
      views:
        | never
    }
    'fixtures/pages/UserDetail.tsx': {
      routes:
        | 'users-id'
      views:
        | never
    }
  }

  /**
   * Get a union of possible route names in a certain route component file.
   * Used by the \\\`typed-router\\\` Volar plugin to automatically type \\\`useRoute()\\\`.
   *
   * @internal
   */
  export type _RouteNamesForFilePath<FilePath extends string> =
    _RouteFileInfoMap extends Record<FilePath, infer Info>
      ? Info['routes']
      : keyof RouteNamedMap
}

export {}
"
`;

exports[`generateDTS snapshot > generates completely typed-router.d.ts for file-based routing > FileBased-typed-router.d.ts 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// oxfmt-ignore
// @ts-nocheck
// noinspection ES6UnusedImports
// Generated by essor-router. !! DO NOT MODIFY THIS FILE !!
// It's recommended to commit this file.
// Make sure to add this file to your tsconfig.json file as an "includes" or "files" entry.

import type {
  RouteRecordInfo,
  ParamValue,
  ParamValueOneOrMore,
  ParamValueZeroOrMore,
  ParamValueZeroOrOne,
} from 'essor-router'
import type {
  InferRouteBeforeLoadData,
  InferRouteDefinitionFromDefinePageModule,
  InferRouteLoaderData,
  InferRouteSearch,
  InferRouteStartOptions,
  RouteTreeNodeInfo,
} from 'essor-router/experimental'

declare module 'essor-router' {
  interface TypesConfig {
    ParamParsers: never
  }

  /**
   * Route name map generated by essor-router
   */
  export interface RouteNamedMap {
    '/': RouteRecordInfo<
      '/',
      '/',
      Record<never, never>,
      Record<never, never>,
      | never
    >,
    '/[...all]': RouteRecordInfo<
      '/[...all]',
      '/[...all]',
      Record<never, never>,
      Record<never, never>,
      | never
    >,
    '/about': RouteRecordInfo<
      '/about',
      '/about',
      Record<never, never>,
      Record<never, never>,
      | never
    >,
    '/users/[id]': RouteRecordInfo<
      '/users/[id]',
      '/users/[id]',
      Record<never, never>,
      Record<never, never>,
      | '/users/[id]/posts'
    >,
    '/users/[id]/posts': RouteRecordInfo<
      '/users/[id]/posts',
      '/users/[id]/posts',
      Record<never, never>,
      Record<never, never>,
      | never
    >,
  }

  /**
   * Route tree map generated by essor-router.
   * Includes search/loader/start type inference from defineRoute()/definePage().
   */
  export interface RouteTreeMap {
    '/': RouteTreeNodeInfo<
      '/',
      '/',
      InferRouteSearch<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/index.tsx?definePage&lang.tsx')>>,
      InferRouteLoaderData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/index.tsx?definePage&lang.tsx')>>,
      InferRouteBeforeLoadData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/index.tsx?definePage&lang.tsx')>>,
      InferRouteStartOptions<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/index.tsx?definePage&lang.tsx')>>
    >,
    '/[...all]': RouteTreeNodeInfo<
      '/[...all]',
      '/[...all]',
      InferRouteSearch<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/[...all].tsx?definePage&lang.tsx')>>,
      InferRouteLoaderData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/[...all].tsx?definePage&lang.tsx')>>,
      InferRouteBeforeLoadData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/[...all].tsx?definePage&lang.tsx')>>,
      InferRouteStartOptions<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/[...all].tsx?definePage&lang.tsx')>>
    >,
    '/about': RouteTreeNodeInfo<
      '/about',
      '/about',
      InferRouteSearch<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/about.tsx?definePage&lang.tsx')>>,
      InferRouteLoaderData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/about.tsx?definePage&lang.tsx')>>,
      InferRouteBeforeLoadData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/about.tsx?definePage&lang.tsx')>>,
      InferRouteStartOptions<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/about.tsx?definePage&lang.tsx')>>
    >,
    '/users/[id]': RouteTreeNodeInfo<
      '/users/[id]',
      '/users/[id]',
      InferRouteSearch<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/users/[id].tsx?definePage&lang.tsx')>>,
      InferRouteLoaderData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/users/[id].tsx?definePage&lang.tsx')>>,
      InferRouteBeforeLoadData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/users/[id].tsx?definePage&lang.tsx')>>,
      InferRouteStartOptions<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/users/[id].tsx?definePage&lang.tsx')>>
    >,
    '/users/[id]/posts': RouteTreeNodeInfo<
      '/users/[id]/posts',
      '/users/[id]/posts',
      InferRouteSearch<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/users/[id]/posts.tsx?definePage&lang.tsx')>>,
      InferRouteLoaderData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/users/[id]/posts.tsx?definePage&lang.tsx')>>,
      InferRouteBeforeLoadData<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/users/[id]/posts.tsx?definePage&lang.tsx')>>,
      InferRouteStartOptions<InferRouteDefinitionFromDefinePageModule<typeof import('/home/ziyang/Documents/www/essor-next-ai/router/packages/unplugin/test/unplugin/src/pages/users/[id]/posts.tsx?definePage&lang.tsx')>>
    >,
  }

  export type RouteTreeNames = keyof RouteTreeMap

  /**
   * Route file to route info map by essor-router.
   * Used by the \\\`typed-router\\\` Volar plugin to automatically type \\\`useRoute()\\\`.
   *
   * Each key is a file path relative to the project root with 2 properties:
   * - routes: union of route names of the possible routes when in this page (passed to useRoute<...>())
   * - views: names of nested views (can be passed to <RouterView name="...">)
   *
   * @internal
   */
  export interface _RouteFileInfoMap {
    'src/pages/index.tsx': {
      routes:
        | '/'
      views:
        | never
    }
    'src/pages/[...all].tsx': {
      routes:
        | '/[...all]'
      views:
        | never
    }
    'src/pages/about.tsx': {
      routes:
        | '/about'
      views:
        | never
    }
    'src/pages/users/[id].tsx': {
      routes:
        | '/users/[id]'
        | '/users/[id]/posts'
      views:
        | 'default'
    }
    'src/pages/users/[id]/posts.tsx': {
      routes:
        | '/users/[id]/posts'
      views:
        | never
    }
  }

  /**
   * Get a union of possible route names in a certain route component file.
   * Used by the \\\`typed-router\\\` Volar plugin to automatically type \\\`useRoute()\\\`.
   *
   * @internal
   */
  export type _RouteNamesForFilePath<FilePath extends string> =
    _RouteFileInfoMap extends Record<FilePath, infer Info>
      ? Info['routes']
      : keyof RouteNamedMap
}

export {}
"
`;
